--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "django-markdown-powered-emails",
+  "name": "introduction-to-wagtail",
   "type": "module",
   "private": true,
   "scripts": {
